css/style.css
/* ... */
@media (max-width: 768px) {
  .container {
    max-width: 40rem;
  }
  .header-title {
    font-size: 3.5rem;
    padding-top: 1.875rem;
  }
  .section {
    margin-top: 0.3125rem;
    margin-bottom: 1.5625rem;
  }
  .section-title {
    font-size: 2.0625rem;
    font-weight: 600;
  }
  .header-content {
    margin-left: 0;
    padding-top: 3rem;
  }
  .founder-photo {
    position: relative;
    width: 100%;
    padding-bottom: 3.125rem;
  }
  .card {
    flex-basis: 100%;
    height: 24.375rem;
  }
  .card-image {
    max-width: 55%;
  }
  .experts-wrapper {
    flex-direction: column;
  }
  .experts-photo,
  .ourProduction-photo {
    margin-top: 2rem;
  }
  .ourProduction-wrapper {
    flex-direction: column;
  }
  .ourProduction-title-separator-block {
    display: flex;
    order: -2;
    flex-direction: column;
    margin-left: -9.375rem;
  }
  .ourProduction-title,
  .ourProduction-saparator {
    display: none;
  }
  .ourProduction-title-hidden,
  .ourProduction-saparator-hidden {
    display: flex;
  }
  .ourProduction-photo {
    display: flex;
    order: -1;
  }
}

@media (max-width: 576px) {
  .container {
    max-width: 90%;
  }
  .header-content {
    padding-top: 2rem;
  }
  .trademark-card {
    column-gap: 0;
    grid-template-columns: 12rem 1fr;
    grid-template-areas:
      "logo title"
      "text text";
  }
  .clients-list {
    columns: 1;
  }
  .clients-logo-item {
    flex-basis: 50%;
  }
  .footer-bottom {
    flex-direction: column;
  }
  .footer-menu-wrapper:last-child {
    margin: 0;
  }
  .footer-menu-wrapper:last-child .footer-menu-list {
    padding: 0;
  }
  .blog-card-text {
    display: none;
  }
}

